--- a/templates/about.html
+++ b/templates/about.html
@@ -195,30 +195,30 @@
 
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="index.html">My Portfolio</a>
+    <a class="navbar-brand" href="/index">My Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
+                <a class="nav-link" href="/project">Projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="resume.html">Resume</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
@@ -231,7 +231,7 @@
 
 <!-- Profile Section -->
 <section class="profile-section">
-    <img src="https://via.placeholder.com/150" alt="Profile Image" class="profile-img">
+    <img src="/static/myself.jpeg" alt="Profile Image" class="profile-img">
     <h2 class="profile-name">Vinayak Khandelwal</h2>
     <p class="profile-bio">I am a dedicated data science student with expertise in machine learning, statistical analysis, and data visualization, complemented by strong front-end development skills. My goal is to leverage these abilities to uncover actionable insights and contribute to innovative and impactful projects.
 
