--- a/templates/index.html
+++ b/templates/index.html
@@ -247,16 +247,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">Skills</a>
+                <a class="nav-link" href="/about">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="project.html">Projects</a>
+                <a class="nav-link" href="/project">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
         </ul>
     </div>
