--- a/templates/project.html
+++ b/templates/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Data Science Portfolio</title>
+    <title>Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome for icons -->
@@ -131,30 +131,30 @@
 
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="index.html">My Portfolio</a>
+    <a class="navbar-brand" href="/index">My Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link" href="/project">Projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="resume.html">Resume</a>
-            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="/resume">Resume</a>
+            </li> -->
         </ul>
     </div>
 </nav>
@@ -186,8 +186,8 @@
                 <div class="project-card">
                     <img src="" alt="Project 2">
                     <div class="project-card-body">
-                        <h2 class="project-card-title"> Bike Prediction Machine Learning Model</h2>
-                        <p class="project-card-description">Brief description of the project. Developed a machine learning model to predict bike rental demand using historical data. The model utilizes algorithms such as linear regression to forecast future bike usage, optimizing resource allocation and improving operational efficiency.
+                        <h2 class="project-card-title"> Old-Bike Prediction Machine Learning Model</h2>
+                        <p class="project-card-description">Brief description of the project. Developed a machine learning model to predict old-bike rental demand using historical data. The model utilizes algorithms such as linear regression to forecast future bike usage, optimizing resource allocation and improving operational efficiency.
                         </p>
                         <a href="https://github.com/VinayakKhandelwal07" class="btn btn-primary">View Details</a>
                     </div>
