--- a/templates/thank.html
+++ b/templates/thank.html
@@ -161,16 +161,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="project.html">Projects</a>
+          <a class="nav-link" href="/project">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="/contact">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/VinayakKhandelwal07" target="_blank"><i class="fab fa-github"></i>
